[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/Models/weaponPack/weaponPack_assets/Models/pistol.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/crosshairs64.png" type="Texture" id=3]
[ext_resource path="res://entities/player_roll_animation.gd" type="Script" id=4]
[ext_resource path="res://scripts/ui.gd" type="Script" id=5]
[ext_resource path="res://entities/player_collision.tscn" type="PackedScene" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
length = 0.5
step = 0.082
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -1.871, -180, -6.09866e-07 ), Vector3( -20.533, -180, -3.56599e-06 ), Vector3( -1.871, -180, -6.09866e-07 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flash:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.492 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 16.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.492 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.605, -0.527, -0.949 ), Vector3( 0.605, -0.348, -0.949 ), Vector3( 0.605, -0.527, -0.949 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.604925, -0.248346, -0.949348 ), Vector3( 0.203492, -0.248346, -1.51816 ), Vector3( 0.605, -0.527, -0.949 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -46.779, -180, -9.52856e-06 ), Vector3( -15.208, -180, -4.83469e-06 ), Vector3( -2.369, -180, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "roll"
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -180, 0, 0 ), Vector3( -360, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "rollside"
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -180 ), Vector3( 0, 0, -360 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 2.4, 0 ), Vector3( 0, 1.8, 0 ), Vector3( 0, 2.4, 0 ) ]
}

[sub_resource type="CapsuleMesh" id=6]

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.2, 0 )
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, 0 )

[node name="Camera" type="Camera" parent="Head"]
far = 400.0

[node name="Pistol" type="MeshInstance" parent="Head/Camera"]
transform = Transform( -15, -2.02477e-07, 1.31064e-06, -1.59577e-07, 14.992, 0.48974, -1.31655e-06, 0.48974, -14.992, 0.605, -0.527, -0.949 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null
material/12 = null
material/13 = null

[node name="Anime" type="AnimationPlayer" parent="Head/Camera/Pistol"]
anims/Fire = SubResource( 1 )
anims/Hit = SubResource( 2 )

[node name="Flash" type="OmniLight" parent="Head/Camera/Pistol"]
transform = Transform( 0.0666667, 1.38778e-15, 1.95399e-14, -1.47105e-15, 0.0666667, 1.86265e-09, -1.86517e-14, -1.86265e-09, 0.0666667, 0.00645423, 0.0347296, 0.0372007 )
light_color = Color( 0.882353, 0.886275, 0.298039, 1 )
light_energy = 16.0
omni_range = 2.2

[node name="RayLong" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="RayShort" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -5 )

[node name="Anime" type="AnimationPlayer" parent="."]
anims/roll = SubResource( 3 )
anims/rollside = SubResource( 4 )
anims/walk = SubResource( 5 )
script = ExtResource( 4 )

[node name="Hud" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="Hud"]
margin_right = 124.0
margin_bottom = 72.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "100
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="Hud"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -124.0
margin_bottom = 72.0
align = 1
valign = 1

[node name="Cursor" type="Control" parent="Hud"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Hud/Cursor"]
texture = ExtResource( 3 )
vframes = 8
hframes = 8

[node name="Injured" type="Control" parent="Hud"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Hud/Injured"]
self_modulate = Color( 0.968627, 0, 0, 0.466667 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="Area" type="Area" parent="." groups=[
"player",
]]
transform = Transform( 1, 0, 0, 0, 1, 6.51683e-07, 0, -6.51683e-07, 1, 0, 0, 0 )

[node name="CollisionShape" parent="Area" instance=ExtResource( 6 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 1.2, 0 )
mesh = SubResource( 6 )
material/0 = null

[node name="CollisionShape" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 1.2, 0 )

[node name="Injured" type="Timer" parent="."]
[connection signal="injured" from="." to="." method="_on_Player_injured"]
[connection signal="set_health" from="." to="Hud" method="_on_Player_set_health"]
[connection signal="timeout" from="Injured" to="." method="_on_Injured_timeout"]
